# clever

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml  commit_check.yml  debug_build.yml  release_build.yml  rust.yml
celvertest/: Cargo.toml
celvertest/src/: main.rs
cleverapp/: Cargo.toml  README.md
cleverapp/src/: app.rs  event.rs  example.clef  main.rs  ui.rs
cleverlib/: Cargo.toml  Readme.md
cleverlib/src/: clef.rs  event.rs  event_collection.rs  lib.rs  template.rs  token.rs
cleverlib/src/template/: token.rs  token_type.rs
src/: app.rs  clef.rs  clever_parser_options.rs  event.rs  event_collection.rs  event_log_level.rs  example.clef  lib.rs  main.rs  tui.rs  ui.rs  update.rs
src/clef_events/: clef_controller.rs  clef_event.rs  event_log_level.rs  mod.rs
