[package]
name = "clever"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.33"
clap = { version = "4.4.18", features = ["derive"] }
crossterm = "0.27.0"
ratatui = "0.25.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
unicode-width = "0.1.11"
