[package]
name = "clever"
version = "0.2.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
crossterm = "0.27.0"
ratatui = "0.25.0"
unicode-width = "0.1.11"
chrono = "0.4.38"
cleverlib = { path = "../cleverlib" }
